<resources>
    <string name="app_name">VIP</string>
    <string name="title_activity_main">VIP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agustin Luques</string>
    <string name="nav_header_subtitle">agus_luques</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialog_message">Para poder publicar su producto debe contactarse con VIP enviando un mail a publicaciones@vip.com.ar</string>
    <string name="dialog_title">Publicaciones</string>
    <string name="ok">Enviar mail</string>

    <!--Contact Form-->
    <string name="contact_form_name">Nombre</string>
    <string name="contact_form_email">Email</string>
    <string name="contact_form_subject">Asunto</string>
    <string name="contact_form_message">Mensaje</string>
    <string name="contact_form_button">Enviar mensaje</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">Campo usuario vacio</string>
    <string name="error_invalid_password">Campo contraseña vacio</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo necesario</string>
    <string name="permission_rationale">"Permiso de contactos necesario para auto-llenado de mails"
    </string>
    <string name="register">
        <u>Registrarse</u>
    </string>

    <!-- Strings related to register -->
    <string name="register_in_mail">Mail</string>
    <string name="register_in_nombre">Nombre</string>
    <string name="register_in_apellido">Apellido</string>
    <string name="info_personal">Información personal</string>
    <string name="register_in_usuario">Usuario</string>
    <string name="register_in_contrasenia">Contraseña</string>
    <string name="register_in_fechaNacimiento">Fecha de nacimiento</string>
    <string name="register_btn">Registrarse</string>
    <string name="saved_data" />
</resources>
