<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginfondo"
    tools:context=".RegisterActivity"
    android:paddingBottom="15dp">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registerP_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/regP_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_usuario"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/regP_contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_contrasenia"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/regP_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/regP_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_nombre"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/regP_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_in_apellido"
                    android:maxLines="1"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/regP_fechaNacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_in_fechaNacimiento"
                        android:maxLines="1"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/white"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnPFecha"
                    android:layout_width="0dp"
                    android:layout_weight="15"
                    android:layout_height="match_parent"
                    android:background="@drawable/dateicon"/>

            </LinearLayout>

            <Button
                android:id="@+id/regP_btn_registrarse"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/buttonshape"
                android:text="@string/register_btn"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:onClick="registerClick"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>